docs: add documentation for listOpening
